<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorSecundary"
              android:gravity="center"
              android:orientation="horizontal"
              android:padding="@dimen/padding_itemTemporada">

    <TextView
        android:id="@+id/tvCapituloItemTemporada"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:fontFamily="sans-serif-ligth"
        android:gravity="center"
        android:hint="@string/tv_capitulo_item_temporada"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextPrimary"
        android:textSize="@dimen/text_size_capitulo_itemTemporada"
        android:textStyle="normal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="left|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTituloItemTemporada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-ligth"
            android:hint="@string/tv_titulo_item_temporada"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextPrimary"
            android:textSize="@dimen/text_size_titulo_itemTemporada"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/tvDuracionItemTemporada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-ligth"
            android:hint="@string/tv_duracion_item_temporada"
            android:textColor="@color/colorTextSecundary"
            android:textColorHint="@color/colorTextSecundary"
            android:textSize="@dimen/text_size_duracion_itemTemporada"
            android:textStyle="normal"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/ivReproducirItemTemporada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@android:color/transparent"
        android:padding="@dimen/padding_itemTemporada"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_play"/>

</LinearLayout>